<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/eventListFragment">

    <fragment
        android:id="@+id/eventListFragment"
        android:name="com.josephb.personaleventplannerapp.ui.list.EventListFragment"
        android:label="@string/title_events">

        <action
            android:id="@+id/action_list_to_edit"
            app:destination="@id/editEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEventFragment"
        android:name="com.josephb.personaleventplannerapp.ui.add.AddEventFragment"
        android:label="@string/title_add" />

    <fragment
        android:id="@+id/editEventFragment"
        android:name="com.josephb.personaleventplannerapp.ui.edit.EditEventFragment"
        android:label="@string/title_edit">

        <argument
            android:name="eventId"
            app:argType="long" />
    </fragment>

</navigation>